# test-project

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/detect-ci-trigger/: action.yaml  script.sh
.github/workflows/: micromamba-windows.yaml  parse_logs.py  pre-commit.yaml  release.yml  run.yaml  test.yaml  trigger.yaml  upstream-dev-ci.yaml  workflow_run.yaml
doc/: api.rst  conf.py  index.rst
doc_numpydoc/: api.rst  conf.py
test/: __init__.py
test/tests/: test_showcase.py
