[metadata]
name = test_project
license = MIT
maintainer = test
maintainer_email = keewis@posteo.de
description = sphinx test project
url = https://github.com/keewis/sphinx-test-project

[options]
packages = find:
python_requires = >=3.6

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
